Changelog
=========

8.1-dev0 - (unreleased)
---------------------------

8.0 - (2019-09-30)
---------------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade
  button available for eea.depiction
  [avoinea refs #109515]
* Upgrade step: Within "Plone > Site setup > Image scales"
  regenerate image scales for your portal-types
  [avoinea refs #109515]
* Change: Added @@recreate-scales browser-view utility
  [avoinea refs #109515]
* Change: Added more custom image scales:
  panoramic, print, landscape, portrait, wide, xlarge
  [avoinea refs #109515]
* Bug fix: Fixed ATFolder imgview adapter for multi-lingual cover images
  [avoinea refs #109515]

7.3 - (2019-08-16)
--------------------------
* Change: thumbnail_view now uses image_mini size as a background image instead
  of an image tag
  [ichim-david refs #106884]

7.2 - (2019-01-28)
--------------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

7.1 - (2018-06-20)
--------------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

7.0 - (2018-02-08)
-----------------------
- Bug fix: allow Dexterity containers to show contained image as thumb
  [tiberich #92045]
- Bug fix: handle more cases of images in eea.rdfmarshaller depiction modifier
  [tiberich #92045]
- Bug fix: use a NamedBlobImage when adding initial image. This fixes issues
  with Plone websites that have replaced the default Archetypes-based content
  types with those derived from Dexterity. In case you have such a website, you
  should delete the "/portal_depiction/generic" image and reimport the EEA
  Depiction - Import Various generic setup step.
  [tiberich #92045]
- Bug fix: fix Dexterity implementation for scales
  [tiberich #92045]

6.9 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

6.8 - (2017-10-30)
------------------