@@ -19,6 +19,10 @@
     directory="images"
     permission="zope.Public" />
 
+  <adapter
+    for="zope.interface.Interface"
+    class=".scales.RecreateScales" />
+
   <browser:page
     for="zope.interface.Interface"
     name="recreate-scales"
