@@ -3,6 +3,8 @@ Changelog
 
 8.1-dev0 - (unreleased)
 ---------------------------
+* Feature: Added possibility to provide custom IRecreateScales adapter for  custom content-type.
+  [avoinea refs #109515]
 
 8.0 - (2019-09-30)
 ---------------------------
